--- a/TimeToDeploy/public/home.html
+++ b/TimeToDeploy/public/home.html
@@ -13,13 +13,25 @@
             font-size: 24px;
             margin-top: 20px;
         }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #ffffff7b;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            margin-left: 400px;
+            margin-right: 400px;
+        }
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time</title>
 </head>
 <body>
-    <h1>City to Time Zone Converter</h1>
+    <h1>See the time of specific city</h1>
 
     <form id="timezone-form">
         <label for="city">Select a City:</label>
@@ -33,10 +45,10 @@
         <button type="submit">Get time</button>
     </form>
 
-
-    <div id="city-clock" class="clock"></div>
-
-    <div id="local-clock" class="clock"></div>
+    <div class="container">
+        <div id="city-clock" class="clock"></div>
+        <div id="local-clock" class="clock"></div>
+    </div>
 
     <script>
         let offSet = 0;
