--- a/03._First_HTML_server/public/secondPage.html
+++ b/03._First_HTML_server/public/secondPage.html
@@ -9,5 +9,7 @@
     
     <h1>Second Page</h1>
 
+  <!--   <script src="dinosaurFactory.js"></script> -->
+    <script type="module" src="dinosaurs.js"></script>
 </body>
 </html>
