svelte added, toast added

--- a/Pokemon/public/pages/contact/contact.html
+++ b/Pokemon/public/pages/contact/contact.html
@@ -1,2 +1,16 @@
+<h1>Contact</h1>
 
-    <h1>Contact</h1>
+<form id="contactForm" action="/contact" method="post">
+  <label>Your name:</label>
+  <input id="name" placeholder="Your name" />
+
+  <label>Your Email:</label>
+  <input id="email" type="email" placeholder="Your email" />
+
+  <label>Message:</label>
+  <textarea id="message" cols="80" rows="10" placeholder="Message"></textarea>
+
+  <button id="submitButton">Submit</button>
+</form>
+
+<!-- <script type="module" src="/pages/contact/contact.js"></script> -->
